# Code-used-on-Daniel-Lemire-s-blog

./: .gitignore  .gitmodules  Makefile  README  README.md  m1cycles.h  random_generators.h
.github/: funding.yml
.github/workflows/: codeql.yml
2010/03/12/: testadd.cpp  testxor.cpp
2010/12/24/: ZX_Thermometer.c
2012/05/21/: .project  ClusteredDataGenerator.java  README  UniformDataGenerator.java  results.gnuplot  results.txt  testbitmap.java
2018/25/: cachemissbench.c  script.sh  simdprune.h
2020/09/: sentinel.cpp
2020/09/10/: CMakeLists.txt  README.md  benchmark.cpp
2020/12/: Makefile  benchmark.cpp
2022/09/14/: CMakeLists.txt  Makefile  README.md  bench.cpp  escape.cpp  escape.h  test.cpp
2023/10/07/servercpp/: CMakeLists.txt  hello-cinatra.cpp  hello-facil.cpp  hello-h2o.cpp  hello-libhv.cpp
2023/10/servercpp/: CMakeLists.txt  hello-cinatra.cpp  hello-libhv.cpp
2024/02/19/: CMakeLists.txt  README.md
2024/02/19/powercap/: CMakeLists.txt
2024/02/19/powercap/inc/: powercap-rapl-sysfs.h  powercap-rapl.h  powercap-sysfs.h  powercap.h
2024/02/19/powercap/src/: powercap-common.c  powercap-common.h  powercap-rapl-sysfs.c  powercap-rapl.c  powercap-sysfs.c  powercap.c
2024/02/19/src/: demo.c
2024/04/06/: CMakeLists.txt  README.md  bun.js  conanfile.txt
2024/04/06/src/: lithium_server.cpp  server.cpp
2024/09/02/: CMakeLists.txt  README.md  resultszen4.txt
2024/09/02/benchmarks/: compress.cpp
2024/09/02/benchmarks/performancecounters/: benchmarker.h  event_counter.h
2024/09/02/include/: avx512compress.h
2024/09/09/: CMakeLists.txt  README.md
2024/09/09/benchmarks/: bench.cpp
2024/09/09/include/: precomptables.h
2024/09/27/: CMakeLists.txt  README.md  main.cpp  script.py  wealth.json
2024/10/06/: CMakeLists.txt  README.md  data.html
2024/10/06/benchmarks/: benchmark.cpp
2025/01/07/: CMakeLists.txt
2025/01/07/benchmarks/: benchmark.cpp
2025/01/07/include/: digitcount.h
2025/01/07/scripts/: run.py
2025/01/19/iszero/: CMakeLists.txt  README.md
2025/01/19/iszero/benchmarks/: benchmark.cpp
2025/01/19/iszero/legacy/: iszero.c
2025/02/07/: CMakeLists.txt  Makefile  cpy.cpp
2025/02/07/src/: benchmark.cpp  cpy.cpp  safecpy.cpp
2025/07/14/: CMakeLists.txt
2025/07/14/benchmarks/: benchmark.cpp  benchmarker.h
2025/08/08/: CMakeLists.txt  CMakePresets.json  README.md
2025/08/08/benchmarks/: benchmark.cpp  benchmarker.h
2025/09/06/: CMakeLists.txt  README.md  space.h
2025/09/06/benchmarks/: benchmark.cpp  benchmarker.h
2025/09/06/include/: avx2.h  avx512vbmi2.h  neon.h  scalar.h  ssse3.h
2025/09/06/src/: scalar.cpp
2025/10/: clear.md
2025/11/09/: CMakeLists.txt  README.md  post.md
2025/11/09/include/: compare.h
2025/11/09/src/: main.cpp
2025/11/15/: CMakeLists.txt  post.md
2025/11/15/benchmarks/: benchmark.cpp  benchmarker.h
2025/12/20/optimistic/: CMakeLists.txt
2025/12/20/optimistic/benchmarks/: benchmark.cpp  benchmarker.h
2025/12/27/benchmark_ip_parsing/: CMakeLists.txt
2025/12/27/benchmark_ip_parsing/benchmarks/: benchmark.cpp
2026/02/08/benchmark/: CMakeLists.txt  README.md
2026/02/08/benchmark/benchmarks/: benchmark.cpp
2026/02/08/benchmark/include/: mylib.h
2026/02/08/benchmark/src/: mylib.cpp
2026/05/22/benchmark/: CMakeLists.txt  README.md
2026/05/22/benchmark/benchmarks/: benchmark.cpp
2026/05/22/benchmark/include/: avx512ip.h
extra/: batchbinary.c  benchmem.cpp  binsearch.c  bitcount.java  bitsetaggregation.c  bitsetcounters.java  bittest.java  btestintrin.cpp  bytevsintcounters.java  card.c  card.java  costmod.cpp  costofremainder.cpp  costofremainder2.cpp  costofremainder3.cpp  counters.java  crazybitset.c  fastmin.cpp  fastsum.cpp  findfast.cpp  floatvsint.cpp  fma.c  highspeedbitset.c  huge.c  integerlog.cpp  interleaved.cpp  inverse.c  ioaccess.cpp  iunpack.cpp  leonidunpacking.cpp  mallocspeed.c  memcpyspeed.c  ped.cpp  polyaurn.java  popcnt.c  prefixsum.java  rangedrandint.c  rleunion.c  scalarproduct.cpp  searchtinyarray.c  (+17 more)
extra/avx2/: bitmask_to_bytemask.c
extra/avx512/: bubble.c  haystack.c  maskcompress.c  max.c  multimerge.c  scalaradd.c  simpleadd.c
extra/binomialcoef/: README.md  binom.c  prime.py
extra/bitmixing/: bitmixing.c  bruteforce.py  bruteforcedeltaregularity.py  clms.py  linearinverse.c  nto1.c
extra/bitsetrange/: bitsetrange.c
extra/bytecounting/: bytevsintcounters.cpp  bytevsintcounters.java
extra/clmul/: emulate.c
extra/cppranges/: Makefile  ranges.cpp
extra/despace/: despace.cpp
extra/digitcount/: Makefile  digitcount.cpp  script.py
extra/falsesharing/: Makefile
extra/fastexp/: Makefile  README.md  fastexp.c
extra/fastflags/: Makefile  README.md  benchmark.h  countbits.cpp  mklarqvist.h
extra/fastmod/: twomods.c
extra/fastmodulo/: fast31.c  tens.c
extra/flathash/: simulation.py
extra/gray/: gray.py
extra/hacker/: idiv.py  imod.py  magic.c  mod23.c  mod7.c  wordaligneddiv.py
extra/hamming_weight/: bigtable.c  fastpopcnt.c
extra/java/: prime.java
extra/karyhash/: karyaccess.c
extra/latin1/: utf8tolatin1.py
extra/measures/: Makefile  reportfreq.cpp
extra/numberparsing/: experiments.c
extra/pi/: pi.c
extra/python/: crazycsv.py
extra/quicksort/: C2LR2.c  C2LR2.h  D3sort.c  D3sort.h  Dsort.c  Dsort.h  Hsort.c  Hsort.h  Isort.c  Isort.h  Makefile  bench.cpp
extra/rng/: rng.c
extra/search/: linespointsstyle.gnuplot  searchproposal1.c  searchproposal1.gnuplot  simpletest.c  skylake_28jan2016.txt
extra/shuffle/: shuffle.c
extra/simdsort/: sort.c
extra/sqrtint/: fastalgo.py
extra/string_view_concat/: Makefile  str.cpp  sum.h
extra/stupidbloom/: adjustor.py  histo.py  simulation.py
extra/substring/: Makefile  main.cpp
extra/swar/: three.cpp
extra/swift/: customshuffle.swift
extra/unicode/: codepoint.c
extra/viewstring/: Makefile  views.cpp
extra/wbench/: Makefile  distribution.cpp  linux-perf-events.h
extra/xor/: locality.c
tests/: test_invariant_package-lock.py
tmp/: Makefile  findwhitespace.py  utf32whitespace.c  visit.c
tools/: mdtohtml.py  mdtohtml.sh
(+1264 files in other folders)
